--- a/manual_app/Gemfile
+++ b/manual_app/Gemfile
@@ -1,10 +1,12 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-ruby "3.4.4"
+ruby '3.4.4'
 
-gem "rails", "~> 7.1"
-gem "sorbet-runtime"
+# Use the local engine gem
+gem 'rails_mcp_engine', path: '..'
+
+gem 'rails', '~> 7.1'
 
 group :development do
-  gem "puma", "~> 6.4"
+  gem 'puma', '~> 6.4'
 end
